@@ -8,6 +8,11 @@ This document contains a list of changes for each release of Krang.
 
 =item *
 
+"Cancel" on edit screens is now multi-window friendly when editing
+multiple objects in multiple screens. [Michael Peters]
+
+=item *
+
 Added "View Details" command to workspace screen. [Michael Peters]
 
 =item *
